Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102384

JS Stack Overflow test fails on Android

XMLWordPrintable

    • Android
    • 4677b2bdd68b71c66d080652dd01e1f49b40f581

      In QtDeclarative, tst_qjsengine fails on Android.
      It fails in void tst_QJSEngine::noAccumulatorInTemplateLiteral().

      The call stack is attached in 2022_04_07_callstack.txt.

      The test tries to trigger a stack overflow. This should be detected in ExecutionEngine::checkStackLimits() in qv4engine_p.h:817.
      Instead a segmentation fault happens. Some maybe helpful data is in the local variables in

      There can be seen:
      callDepth is 82
      jsStackTop is 0x0000007606bd5310
      jsStackLimit is 0x0000007606fd2000

      The last resolvable stack frame is is Parser::parse(int):

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qtqmlteam Qt Qml Team User
            andreasbuhr Andreas Buhr
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes