Adapt qv4engine to stack size on Android

Adapt maximum stack size to not run into segfaults
due to stack overflow.

Task-number: QTBUG-102384
Task-number: QTBUG-96788
Change-Id: I4ba3518369c822b1b2d93388817beb7f86d19cdc
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 38d455dca051d7580449553d85b88d5df9d2162a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>